syntax = "proto2";

message PingMessage {
  required string data = 1;
}

